# chrome-compile

./: README.md
amazon-linux-x64/: Dockerfile  README.md  args.gn  build-chromium.sh  launch-ec2.sh  setup-ec2.sh
lambda-arm64/: Dockerfile  README.md  args.gn  build-chromium.sh  launch-ec2.sh  setup-ec2.sh
linux-arm64/: Dockerfile  README.md  args.gn  build-chromium.sh  launch-ec2.sh  setup-ec2.sh
linux-x64/: Dockerfile  README.md  args.gn  build-chromium.sh  launch-ec2.sh  setup-ec2.sh
output/restructure-notes/: README.md
